--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,visualstudio
 
+consolePruebas/
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
