se agrega NLog, try catch

--- a/tallerIIpractico3/tallerIIpractico3.csproj
+++ b/tallerIIpractico3/tallerIIpractico3.csproj
@@ -6,11 +6,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.10" />
+    <PackageReference Include="NLog" Version="5.0.0-preview.2" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Rotativa\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="NLog.Config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
