--- a/tallerIIpractico3/appsettings.json
+++ b/tallerIIpractico3/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "default": "Data Source = C:\\sqlitestudio-3.3.3\\SQLiteStudio\\Cadeteria\\Cadeteria.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
