--- a/tallerIIpractico3/tallerIIpractico3.csproj
+++ b/tallerIIpractico3/tallerIIpractico3.csproj
@@ -5,13 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Db\Dd.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.10" />
     <PackageReference Include="NLog" Version="5.0.0-preview.2" />
     <PackageReference Include="Rotativa.AspNetCore" Version="1.2.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Rotativa\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Models\Db\Dd.cs" />
   </ItemGroup>
 
   <ItemGroup>
