--- a/tallerIIpractico3/appsettings.json
+++ b/tallerIIpractico3/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "default": "Data Source = C:\\Users\\MetalZe\\Downloads\\sqlitestudio-3.3.3\\SQLiteStudio\\Cadeteria.db;"
+    "default": "Data Source=Models\\DataBase\\Data.db;Cache=Shared;"
   },
   "Logging": {
     "LogLevel": {
